WIP: Brain dump of ideas for paper

--- a/Documentation/abstract.tex
+++ b/Documentation/abstract.tex
@@ -1,1 +1,3 @@
-Many hosts - large storage devices - slow I/O - not suitable for applications requiring very low latency such as interactive applications. In this paper we present Flash cache, a multi-layer flash based caching technique that improves the latency and throughput by XX\%. We also conduct a cost based analysis. Our implementation uses a two-level caching system, with LRU eviction policy that demonstrates latency improvement upto YY times and throughput by ZZ times for a cost of \$K per GB of cache.
+A typical datacenter today hosts tens of hundereds of VMs on a single physical machine, backed up by huge storage devices that spans several tera bytes, but the I/O accesses to these devices have remained slow throughout these expansion. Accesses to these devices are very high and are not suitable for applications requiring very low latency such as interactive applications.
+
+In this paper we present Flash cache, a multi-layer flash based caching technique, that uses multiple devices of varied speed and cost such as SSD, PCIE SSD, NVM, etc. for caching. Our simulation shows that by using our caching algorithm we can improve the latency and throughput of I/Os for any given host by XX\% compared to naive algorithms. We also conduct a cost based analysis. Our implementation uses a two-level caching system, with LRU eviction policy that demonstrates latency improvement upto YY times and throughput by ZZ times for a cost of \$K per GB of cache. \note{Talk about priority, and why we need this.}
