--- a/Documentation/motivation.tex
+++ b/Documentation/motivation.tex
@@ -1,7 +1,19 @@
-Conduct a motivating experiment that explains
-    Why is this problem important
-    Assuming caches are always good
-        Why multi tier
-        Why partitioning
-            Consider ~10-100 VMs on a single host
-            Global cache is not efficient
+% Conduct a motivating experiment that explains
+%     Why is this problem important
+%     Assuming caches are always good
+%         Why multi tier
+%         Why partitioning
+%             Consider ~10-100 VMs on a single host
+%             Global cache is not efficient
+
+\section{Motivation}
+The motivation for this work are two-fold First, We show why we need a smart partitioning algorithm. Second, We show why we need a multi layer cache
+
+The need for smart partitioning algorithm - The need for partitioning the SSD cache has been showed before in [vCacheShare, ...]. To further illustrate we conduct a simple experiment where two VMs, namely VM1 and VM2, share a caching device. From figure XX, one can see that VM1 has a high random I/O with a very low hit ratio while VM2 has a low I/O but has a high hit rate. Figure YY, shows that despite VM2 could benefit largely from a cache, it has a very low space allocation in the cache, due to contention from VM1. From figure XX and YY, one can infer that contention can make a cache entirely unusable.
+
+The case for multi-tier cache:
+\begin{itemize}
+\item Some VMs have higher priority than others.
+\item Latency sensitive VMs can greatly benefit from a multi-tier cache.
+\item Interactive VMs that has a very low I/O, but a very high hit rate can be ``separated" and placed in the lowest latency cache for high reponsiveness.
+\end{itemize}
