--- a/Documentation/paper.tex
+++ b/Documentation/paper.tex
@@ -1,4 +1,11 @@
-\documentclass{sig-alternate-per}
+
+\documentclass[10pt,reprint]{socc14}
+
+\usepackage{amsmath}
+\usepackage{mathptmx}
+
+%%%%%%%%%%%%%%%%%%%%% Default args %%%%%%%%%%%%%
+
 \usepackage{graphicx, subfigure}
 \usepackage{verbatim}
 
@@ -18,47 +25,71 @@
 \usepackage{times}
 \usepackage{comment}
 
-\usepackage{caption}
-\usepackage{authblk} % For author block style
+% \usepackage{caption}
 
 \newcommand{\cut}[1]{}
 \newcommand{\note}[1]{{\color{red}[\bf{#1}]}}
 
-\renewcommand\Authands{ and }
-\setlength{\affilsep}{1mm}
-% correct bad hyphenation here
-%\hyphenation{op-tical net-works semi-conduc-tor}
+%%%%%%%%%%%%%%%%%%%%% Default args %%%%%%%%%%%%%
 
-\addtolength{\textfloatsep}{1mm}
-
-
-
-%
-% paper title
-% can use linebreaks \\ within to get better formatting as desired
-\title{Flash cache}
-
-
-%\author{Sundaresan Rajasekaran}
-%\author{Shaohua Duan}
-%\author{Timothy Wood}
-%\affil{Department of Computer Science, The George Washington University, Washington, D.C., USA}
 
 
 
 \begin{document}
-% make the title area
+
+\special{papersize=8.5in,11in}
+\setlength{\pdfpageheight}{\paperheight}
+\setlength{\pdfpagewidth}{\paperwidth}
+
+\conferenceinfo{Submission to SoCC '14}{October, 2014, Seattle, WA, USA}
+\copyrightyear{2014}
+\copyrightdata{978-1-nnnn-nnnn-n/yy/mm}
+\doi{nnnnnnn.nnnnnnn}
+
+% Uncomment one of the following two, if you are not going for the
+% traditional copyright transfer agreement.
+
+%\exclusivelicense                % ACM gets exclusive license to publish,
+                                  % you retain copyright
+
+%\permissiontopublish             % ACM gets nonexclusive license to publish
+                                  % (paid open-access papers,
+                                  % short abstracts)
+
+%\titlebanner{banner above paper title}        % These are ignored unless
+%\preprintfooter{short description of paper}   % 'preprint' option specified.
+
+
+\title{Multi-Tier Flash Cache}
+%\subtitle{Subtitle text, if any}
+
+\authorinfo{Name1}
+           {Affiliation1}
+           {Email1}
+\authorinfo{Name2\and Name3}
+           {Affiliation2/3}
+           {Email2/3}
+
 \maketitle
+
+\begin{abstract}
 \input{abstract}
-\keywords{virtualization, flash cache}
+\end{abstract}
+
+% \category{CR-number}{subcategory}{third-level}
+
+\keywords
+virtualization, flash cache
+
 \input{intro}
 \input{background}
+\input{overview}
 \input{eval}
 \input{related}
 \input{conclusions}
 
-\bibliographystyle{abbrv}
-\bibliography{citations}
+% \bibliographystyle{abbrv}
+% \bibliography{citations}
 
 % that's all folks
 \end{document}
