edit overview section

--- a/Documentation/overview.tex
+++ b/Documentation/overview.tex
@@ -2,11 +2,11 @@
 
 \subsection{Hit Ratio Curves}
 
-Hit ratio curves as a function of cache size gives us an estimate of the percentage of cache hits for any given cache size. A common method to calculate the HRC is by calculating the \emph{Reuse Distance} for every block request. A Reuse distance is the number of unique blocks between two consecutive accesses of a given block.
+Hit ratio curves as a function of cache size gives us an estimate of the percentage of cache hits for any given cache size. A common method to calculate the HRC is by calculating the \emph{Reuse Distance} for every block request. A Reuse Distance (RD) is the number of unique blocks between two consecutive accesses of a given block.
 
-RD calculation for every block is computationally intensive. For every block request, we need to track back to the point where that block has been accessed previously, and get the number of unique elements. A naive implementation of Mattson's algorithm takes O(n) space, where n is the size of the trace, and O(n.m) runtime where m is the number of unique blocks in the trace.
+RD calculation for every block for a workload is computationally intensive. All the block requests for a given workload needs to be saved in the memory, and for every block request, the previous occurrence of that request has to be found and the number of unique elements between the two occurrences needs to be calculated. A naive implementation of Mattson's algorithm thus takes $\mathcal{O}(n\log{}n)$ space, where $n$ is the size of the trace, and $\mathcal{O}(n\log{}nm)$ runtime where $m$ is the number of unique blocks in the trace.
 
-Recently there have been some works[Shards, CounterStack] that calculate RD in sublinear time with constant space. CounterStack algorithm uses a counter for each of the block request, that holds the counter for the number of blocks requested after the counter for a particular block has been initialized. Comparing the counter of a block with other blocks give the RD of that block. The space is exponentially reduced by the usage of Hyperloglog data structure for each of the counters and by various other techniques such as downsampling.
+Recently there have been some works [Parda, Shards, CounterStack] that calculate RD in sublinear time with constant space. CounterStack algorithm uses a counter for each of the block request, that holds the counter for the number of blocks requested after the counter for a particular block has been initialized. Comparing the counter of a block with other blocks give the RD of that block. The space is exponentially reduced by the usage of Hyperloglog [ref] data structure for each of the counters and by various other techniques such as downsampling.
 
 Shards on the other hand uses hashing to calculate the hash value of the block address and modulo the value by a user defined constant. If the resulting value is lesser than another user defined threshold, the block address is retained for calculating RD, if not, the block address is discarded. The authors of Shards claim that by just using the very minimal sample of uniformly distrubuted block addresses, they are able to calculate the RD values with very little error.
 
