Include Motivation section

--- a/Documentation/paper.tex
+++ b/Documentation/paper.tex
@@ -83,6 +83,7 @@ virtualization, flash cache
 
 \input{intro}
 \input{background}
+\input{motivation}
 \input{overview}
 \input{eval}
 \input{related}
