--- a/Documentation/paper.tex
+++ b/Documentation/paper.tex
@@ -89,8 +89,8 @@ virtualization, flash cache
 \input{related}
 \input{conclusions}
 
-% \bibliographystyle{abbrv}
-% \bibliography{citations}
+\bibliographystyle{abbrv}
+\bibliography{citations}
 
 % that's all folks
 \end{document}
