--- a/Documentation/overview.tex
+++ b/Documentation/overview.tex
@@ -4,7 +4,7 @@
 
 Hit ratio curves as a function of cache size gives us an estimate of the percentage of cache hits for any given cache size. A common method to calculate the HRC is by calculating the \emph{Reuse Distance} for every block request. A Reuse Distance (RD) is the number of unique blocks between two consecutive accesses of a given block.
 
-RD calculation for every block for a workload is computationally intensive. All the block requests for a given workload needs to be saved in the memory, and for every block request, the previous occurrence of that request has to be found and the number of unique elements between the two occurrences needs to be calculated. A naive implementation of Mattson's algorithm thus takes $\mathcal{O}(n\log{}n)$ space, where $n$ is the size of the trace, and $\mathcal{O}(n\log{}nm)$ runtime where $m$ is the number of unique blocks in the trace.
+RD calculation for every block for a workload is computationally intensive. All the block requests for a given workload needs to be saved in the memory, and for every block request, the previous occurrence of that request has to be found and the number of unique elements between the two occurrences needs to be calculated. A naive implementation of Mattson's algorithm thus takes $\mathcal{O}(n\log{}n)$ space, where $n$ is the size of the trace, and $\mathcal{O}(n\log{}n.m)$ runtime where $m$ is the number of unique blocks in the trace.
 
 Recently there have been some works [Parda, Shards, CounterStack] that calculate RD in sublinear time with constant space. CounterStack algorithm uses a counter for each of the block request, that holds the counter for the number of blocks requested after the counter for a particular block has been initialized. Comparing the counter of a block with other blocks give the RD of that block. The space is exponentially reduced by the usage of Hyperloglog [ref] data structure for each of the counters and by various other techniques such as downsampling.
 
@@ -18,7 +18,14 @@ In our work, we chose to use a variation of Mattson's Algorithm instead of adopt
 
  \subsection{Reuse Intensity}
 
-\emph{Reuse Intesity} is used as a measure to capture sudden bursts in hit ratio, as opposed to RD which is used to capture the overall trend of the hit ratio for a given time window. For certain web services, such as stock market providers, capturing quick bursts in trend is vital. To this end, $$ RI = 1 - \frac{\text{\# unique blocks}}{\text{\# total blocks}} $$ captures the sudden bursts in Hit Ratio. The above equation indicates that, more the workload is random, the closer the value of $RI$ will be to 0. For instance, if there is only 9 unique blocks from a workload of 10 block requests, the value of $RI$ will be 0.1. On the other hand, if the workload has a lot of repeated requests to the same block, the value of $RI$ will be close to 1. The value of $RI$ once every 60 seconds, and can be tuned as a user parameter. The overhead incurred by this calculation is very minimal compared to the other computations in our algorithm. So, calcualting this value in the background/parallely to other computations results in zero overhead. \note{is this statement true?}
+\emph{Reuse Intesity} is used as a measure to capture sudden bursts in hit ratio, as opposed to RD which is used to capture the overall trend of the hit ratio for a given time window. For certain web services, such as stock market providers, capturing quick bursts in trend is vital. To this end, 
+
+\begin{equation}
+RI = 1 - \frac{\text{\# unique blocks}}{\text{\# total blocks}}
+\label{eq:ri}
+\end{equation}
+
+captures the sudden bursts in Hit Ratio. The above equation indicates that, more the workload is random, the closer the value of $RI$ will be to 0. For instance, if there is only 9 unique blocks from a workload of 10 block requests, the value of $RI$ will be 0.1. On the other hand, if the workload has a lot of repeated requests to the same block, the value of $RI$ will be close to 1. The value of $RI$ once every 60 seconds, and can be tuned as a user parameter. The overhead incurred by this calculation is very minimal compared to the other computations in our algorithm. So, calcualting this value in the background/parallely to other computations results in zero overhead. \note{is this statement true?}
 
 \subsection{Cache Utility model}
 
