Edit related work section

--- a/Documentation/related.tex
+++ b/Documentation/related.tex
@@ -1,3 +1,3 @@
 \section{Related Work}
 
-The most closest work to ours, from which we extended our work upon is by Meng et. al.~\cite{meng_vcacheshare:_2014}
+The most closest work to ours, from which we extended our work upon is by Meng et. al.~\cite{meng_vcacheshare:_2014}. Meng et. al. shows why host-side caching technique is necessary and develops a system \emph{vCacheShare}, a framework that dynamically allocates cache-space at runtime for virtualized environments. We extend their findings and present a case for the need of a two-tier cache and show through our simulation how a two tier can improve the throughput and latency.
