Add extra citations and some edits

--- a/Documentation/citations.bib
+++ b/Documentation/citations.bib
@@ -21,7 +21,7 @@
 	booktitle = {{IN} {AOFA} ’07: {PROCEEDINGS} {OF} {THE} 2007 {INTERNATIONAL} {CONFERENCE} {ON} {ANALYSIS} {OF} {ALGORITHMS}},
 	author = {Flajolet, Philippe and Fusy, Éric and Gandouet, Olivier and al, et},
 	year = {2007},
-	file = {Citeseer - Full Text PDF:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/VUQ9E74E/Flajolet et al. - 2007 - Hyperloglog The analysis of a near-optimal cardin.pdf:application/pdf;Citeseer - Snapshot:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/NKA8IQ5F/summary.html:text/html}
+	file = {Citeseer - Full Text PDF:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/VUQ9E74E/Flajolet et al. - 2007 - Hyperloglog The analysis of a near-optimal cardin.pdf:application/pdf}
 }
 
 @inproceedings{wires_characterizing_2014,
@@ -62,4 +62,91 @@
 	keywords = {Algorithm design and analysis, Analytical models, Arrays, cache size upper bound, cache storage, caching, data cache locality characterization, Data Locality, Histograms, LRU Stack Distance, memory address trace analysis, Optimization, Parallel algorithms, Parallel processing, parallel reuse distance analysis algorithm, PARDA, Performance analysis, Program processors, Reuse Distance, SPEC CPU 2006 benchmark suite, stack histogram model, tunable parameter},
 	pages = {1284--1294},
 	file = {Niu et al. - 2012 - PARDA A Fast Parallel Reuse Distance Analysis Alg.pdf:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/6QJZCZIM/Niu et al. - 2012 - PARDA A Fast Parallel Reuse Distance Analysis Alg.pdf:application/pdf}
+}
+
+@inproceedings{albrecht_janus:_2013,
+	address = {Berkeley, CA, USA},
+	series = {{USENIX} {ATC}'13},
+	title = {Janus: {Optimal} {Flash} {Provisioning} for {Cloud} {Storage} {Workloads}},
+	url = {http://dl.acm.org/citation.cfm?id=2535461.2535473},
+	booktitle = {Proceedings of the 2013 {USENIX} {Conference} on {Annual} {Technical} {Conference}},
+	publisher = {USENIX Association},
+	author = {Albrecht, Christoph and Merchant, Arif and Stokely, Murray and Waliji, Muhammad and Labelle, François and Coehlo, Nate and Shi, Xudong and Schrock, C. Eric},
+	year = {2013},
+	pages = {91--102},
+	file = {Albrecht et al. - 2013 - Janus Optimal Flash Provisioning for Cloud Storag.pdf:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/XSSWFPBU/Albrecht et al. - 2013 - Janus Optimal Flash Provisioning for Cloud Storag.pdf:application/pdf}
+}
+
+@inproceedings{narayanan_migrating_2009,
+	address = {New York, NY, USA},
+	series = {{EuroSys} '09},
+	title = {Migrating {Server} {Storage} to {SSDs}: {Analysis} of {Tradeoffs}},
+	isbn = {978-1-60558-482-9},
+	url = {http://doi.acm.org/10.1145/1519065.1519081},
+	doi = {10.1145/1519065.1519081},
+	booktitle = {Proceedings of the 4th {ACM} {European} {Conference} on {Computer} {Systems}},
+	publisher = {ACM},
+	author = {Narayanan, Dushyanth and Thereska, Eno and Donnelly, Austin and Elnikety, Sameh and Rowstron, Antony},
+	year = {2009},
+	keywords = {enterprise storage, enterprise storage workloads, flash, solid-state storage, ssd},
+	pages = {145--158},
+	file = {Narayanan et al. - 2009 - Migrating Server Storage to SSDs Analysis of Trad.pdf:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/5EKQ6HMU/Narayanan et al. - 2009 - Migrating Server Storage to SSDs Analysis of Trad.pdf:application/pdf}
+}
+
+@inproceedings{wang_balancing_2014,
+	address = {Berkeley, CA, USA},
+	series = {{FAST}'14},
+	title = {Balancing {Fairness} and {Efficiency} in {Tiered} {Storage} {Systems} with {Bottleneck}-aware {Allocation}},
+	isbn = {978-1-931971-08-9},
+	url = {http://dl.acm.org/citation.cfm?id=2591305.2591328},
+	booktitle = {Proceedings of the 12th {USENIX} {Conference} on {File} and {Storage} {Technologies}},
+	publisher = {USENIX Association},
+	author = {Wang, Hui and Varman, Peter},
+	year = {2014},
+	pages = {229--242},
+	file = {fast14.pdf:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/CIXZ24WJ/fast14.pdf:application/pdf}
+}
+
+@inproceedings{chen_hystor:_2011,
+	address = {New York, NY, USA},
+	series = {{ICS} '11},
+	title = {Hystor: {Making} the {Best} {Use} of {Solid} {State} {Drives} in {High} {Performance} {Storage} {Systems}},
+	isbn = {978-1-4503-0102-2},
+	url = {http://doi.acm.org/10.1145/1995896.1995902},
+	doi = {10.1145/1995896.1995902},
+	booktitle = {Proceedings of the {International} {Conference} on {Supercomputing}},
+	publisher = {ACM},
+	author = {Chen, Feng and Koufaty, David A. and Zhang, Xiaodong},
+	year = {2011},
+	keywords = {hard disk drive, hybrid storage system, solid state drive},
+	pages = {22--32},
+	file = {TR-11-6.pdf:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/JR7H4Q2T/TR-11-6.pdf:application/pdf}
+}
+
+@inproceedings{guerra_cost_2011,
+	address = {Berkeley, CA, USA},
+	series = {{FAST}'11},
+	title = {Cost {Effective} {Storage} {Using} {Extent} {Based} {Dynamic} {Tiering}},
+	isbn = {978-1-931971-82-9},
+	url = {http://dl.acm.org/citation.cfm?id=1960475.1960495},
+	booktitle = {Proceedings of the 9th {USENIX} {Conference} on {File} and {Stroage} {Technologies}},
+	publisher = {USENIX Association},
+	author = {Guerra, Jorge and Pucha, Himabindu and Glider, Joseph and Belluomini, Wendy and Rangaswami, Raju},
+	year = {2011},
+	pages = {20--20},
+	file = {Guerra.pdf:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/CVVAJPQA/Guerra.pdf:application/pdf}
+}
+
+@article{tai_improving_2015,
+	title = {Improving {Flash} {Resource} {Utilization} at {Minimal} {Management} {Cost} in {Virtualized} {Flash}-based {Storage} {Systems}},
+	volume = {PP},
+	issn = {2168-7161},
+	doi = {10.1109/TCC.2015.2424886},
+	number = {99},
+	journal = {Cloud Computing, IEEE Transactions on},
+	author = {Tai, J. and Liu, D. and Yang, Z. and Zhu, X. and Lo, J. and Mi, N.},
+	year = {2015},
+	keywords = {Bandwidth, cloud computing, Flash resource management, Flash utilization, Heuristic algorithms, IO access pattern, IO hit ratio, Measurement, resource management, Servers, Virtualized storage systems, Virtual machining},
+	pages = {1--1},
+	file = {Tai et al. - 2015 - Improving Flash Resource Utilization at Minimal Ma.pdf:/Users/sunny/Library/Application Support/Zotero/Profiles/wq28tkuk.default/zotero/storage/JRJESVKG/Tai et al. - 2015 - Improving Flash Resource Utilization at Minimal Ma.pdf:application/pdf}
 }
